5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1585_2895.log
== TEST (2019-03-21 11:32:37) 
-- CODE:
print(input("quantos jogos?"))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:22) 
-- CODE:
print(input("quantos jogos?"))
print(input("qual o preço?"))
print(input("qual sua cidade?"))
Manaus = 40.0
-- OUTPUT:
12
45.0
78.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:52) 
-- CODE:
print(input("quantos jogos?"))
print(input("qual o preço?"))
print(input("qual sua cidade?"))
Manaus = 40.0
-- OUTPUT:
12
45.0
78.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:28) 
-- CODE:
print(input("quantos jogos?"))
print(input("qual o preço?"))

-- OUTPUT:
12
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:12) 
-- CODE:
quant = float(input("quantos jogos?"))
preço = float(input("qual o preço?"))
frete = float(input("qual sua cidade?"))
Manaus = 40.0
print(quant * preço + frete)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:37) 
-- CODE:
quant = float(input("quantos jogos?"))
preco = float(input("qual o preço?"))
frete = float(input("qual sua cidade?"))
Manaus = 40.0
print(quant * preço + frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(quant * preço + frete)
NameError: name 'preço' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:13) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o preço? "))
frete = float(input("qual sua cidade? "))
Manaus = 40.0
print(quant * preço + frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(quant * preço + frete)
NameError: name 'preço' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:24) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o preço? "))
frete = float(input("qual sua cidade? "))
Manaus = 40.0
print(quant * preço + frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(quant * preço + frete)
NameError: name 'preço' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:54) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o preço? "))
frete = float(input("qual sua cidade? "))
Manaus = 40.0
print(quant * preco + frete)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:54) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o preço? "))
frete = float(input("qual o frete? "))
print(quant * preco + frete)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:07) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o preço? "))
frete = float(input("qual o frete? "))
print(quant * preco + frete)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:46) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o preço? "))


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:47:28) 
-- CODE:
quant = float(input("quantos jogos? "))



-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:20) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o custo? "))


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:30) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o custo? "))
frete = float(input("qual o frete? "))


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:50) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o custo? "))
frete = float(input("qual o frete? "))
total = quant * preco + frete
print(total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:55) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o custo? "))
frete = float(input("qual o frete? "))
total = quant * preco + frete
print(total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:51:12) 
-- CODE:
quant = float(input("quantos jogos? "))
preco = float(input("qual o custo? "))
frete = float(input("qual o frete? "))
total = quant * preco + frete
print(total)

-- EXECUTION TIME:
0.153712
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
